--- a/PROMETHEE_Score_nb.ipynb
+++ b/PROMETHEE_Score_nb.ipynb
@@ -5298,7 +5298,7 @@
    "source": [
     "dados = pd.read_excel(\"dados_TCC.xlsx\", index_col=0)\n",
     "dados = dados.dropna(axis=0)\n",
-    "dados.loc[\"Brazil\"]"
+    "dados.loc[\"Brazil\"]\n"
    ]
   },
   {
