--- a/Heritage - Numerical Aplication.ipynb
+++ b/Heritage - Numerical Aplication.ipynb
@@ -22522,7 +22522,7 @@
     }
    ],
    "source": [
-    "# Porcentagem de vezes que Turkmenistan vence a_12\n",
+    "# Porcentagem de vezes que Turkmenistan vence Ireland\n",
     "\n",
     "count = 0\n",
     "for j in range (n_simulations):\n",
