--- a/tests_on_clustered_data.ipynb
+++ b/tests_on_clustered_data.ipynb
@@ -12380,7 +12380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -12406,81 +12406,337 @@
        "      <th></th>\n",
        "      <th>Global Efficiency</th>\n",
        "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Global Efficiency</th>\n",
+       "      <th>Position</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a_1</th>\n",
+       "      <td>0.309804</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.314070</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.315301</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.314433</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.312745</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.317029</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>0.359034</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.388812</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.411024</td>\n",
        "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_2</th>\n",
+       "      <td>0.315030</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.341066</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.371284</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.397472</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.420105</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.441399</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>0.488499</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.521888</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.546793</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_3</th>\n",
+       "      <td>0.147377</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.179782</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.216749</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.249315</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.278396</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.305566</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>0.364619</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.406482</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.437708</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_4</th>\n",
+       "      <td>0.862091</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.867360</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.877061</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.888009</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.899650</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.909011</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.920904</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.929335</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.935624</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_5</th>\n",
+       "      <td>0.739141</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.735059</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.727002</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.718579</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.710522</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.706929</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.721062</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.731082</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.738556</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_6</th>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_7</th>\n",
+       "      <td>0.417066</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.439231</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.465909</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.490319</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.512818</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.533269</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>0.574526</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.603774</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.625590</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_8</th>\n",
+       "      <td>0.065249</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.100772</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.140872</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.175923</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.207007</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.236224</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>0.300696</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.346401</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.380492</td>\n",
        "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_9</th>\n",
+       "      <td>0.408587</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.431074</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.458076</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.482742</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.505448</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.526110</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>0.567927</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.597572</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.619684</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_10</th>\n",
+       "      <td>0.273581</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.301195</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.333347</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.362096</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.388097</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.412122</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>0.462848</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.498808</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.525630</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_11</th>\n",
+       "      <td>0.629210</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.633964</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.634391</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.632581</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.629692</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.630546</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>0.652220</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.667585</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.679046</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_12</th>\n",
+       "      <td>0.759268</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.762392</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.761536</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.758748</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.754974</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.754170</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>0.767609</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.777137</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.784243</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_13</th>\n",
+       "      <td>0.088452</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.123094</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.162308</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.195668</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.224167</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.251347</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>0.313497</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.357557</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.390420</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_14</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.008039</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>0.070349</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.114521</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.147469</td>\n",
        "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_15</th>\n",
+       "      <td>0.982673</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.613185</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.364745</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.197955</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.079586</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>15.0</td>\n",
        "    </tr>\n",
@@ -12489,31 +12745,99 @@
        "</div>"
       ],
       "text/plain": [
-       "      Global Efficiency  Position\n",
-       "a_1            0.359034      11.0\n",
-       "a_2            0.488499       8.0\n",
-       "a_3            0.364619      10.0\n",
-       "a_4            0.920904       2.0\n",
-       "a_5            0.721062       4.0\n",
-       "a_6            1.000000       1.0\n",
-       "a_7            0.574526       6.0\n",
-       "a_8            0.300696      13.0\n",
-       "a_9            0.567927       7.0\n",
-       "a_10           0.462848       9.0\n",
-       "a_11           0.652220       5.0\n",
-       "a_12           0.767609       3.0\n",
-       "a_13           0.313497      12.0\n",
-       "a_14           0.070349      14.0\n",
-       "a_15           0.000000      15.0"
+       "      Global Efficiency  Position  Global Efficiency  Position   \n",
+       "a_1            0.309804      10.0           0.314070      10.0  \\\n",
+       "a_2            0.315030       9.0           0.341066       9.0   \n",
+       "a_3            0.147377      12.0           0.179782      12.0   \n",
+       "a_4            0.862091       3.0           0.867360       2.0   \n",
+       "a_5            0.739141       5.0           0.735059       4.0   \n",
+       "a_6            1.000000       1.0           1.000000       1.0   \n",
+       "a_7            0.417066       7.0           0.439231       7.0   \n",
+       "a_8            0.065249      14.0           0.100772      14.0   \n",
+       "a_9            0.408587       8.0           0.431074       8.0   \n",
+       "a_10           0.273581      11.0           0.301195      11.0   \n",
+       "a_11           0.629210       6.0           0.633964       5.0   \n",
+       "a_12           0.759268       4.0           0.762392       3.0   \n",
+       "a_13           0.088452      13.0           0.123094      13.0   \n",
+       "a_14           0.000000      15.0           0.000000      15.0   \n",
+       "a_15           0.982673       2.0           0.613185       6.0   \n",
+       "\n",
+       "      Global Efficiency  Position  Global Efficiency  Position   \n",
+       "a_1            0.315301      11.0           0.314433      10.0  \\\n",
+       "a_2            0.371284       8.0           0.397472       8.0   \n",
+       "a_3            0.216749      12.0           0.249315      11.0   \n",
+       "a_4            0.877061       2.0           0.888009       2.0   \n",
+       "a_5            0.727002       4.0           0.718579       4.0   \n",
+       "a_6            1.000000       1.0           1.000000       1.0   \n",
+       "a_7            0.465909       6.0           0.490319       6.0   \n",
+       "a_8            0.140872      14.0           0.175923      14.0   \n",
+       "a_9            0.458076       7.0           0.482742       7.0   \n",
+       "a_10           0.333347      10.0           0.362096       9.0   \n",
+       "a_11           0.634391       5.0           0.632581       5.0   \n",
+       "a_12           0.761536       3.0           0.758748       3.0   \n",
+       "a_13           0.162308      13.0           0.195668      13.0   \n",
+       "a_14           0.000000      15.0           0.000000      15.0   \n",
+       "a_15           0.364745       9.0           0.197955      12.0   \n",
+       "\n",
+       "      Global Efficiency  Position  Global Efficiency  Position   \n",
+       "a_1            0.312745      10.0           0.317029      10.0  \\\n",
+       "a_2            0.420105       8.0           0.441399       8.0   \n",
+       "a_3            0.278396      11.0           0.305566      11.0   \n",
+       "a_4            0.899650       2.0           0.909011       2.0   \n",
+       "a_5            0.710522       4.0           0.706929       4.0   \n",
+       "a_6            1.000000       1.0           1.000000       1.0   \n",
+       "a_7            0.512818       6.0           0.533269       6.0   \n",
+       "a_8            0.207007      13.0           0.236224      13.0   \n",
+       "a_9            0.505448       7.0           0.526110       7.0   \n",
+       "a_10           0.388097       9.0           0.412122       9.0   \n",
+       "a_11           0.629692       5.0           0.630546       5.0   \n",
+       "a_12           0.754974       3.0           0.754170       3.0   \n",
+       "a_13           0.224167      12.0           0.251347      12.0   \n",
+       "a_14           0.000000      15.0           0.008039      14.0   \n",
+       "a_15           0.079586      14.0           0.000000      15.0   \n",
+       "\n",
+       "      Global Efficiency  Position  Global Efficiency  Position   \n",
+       "a_1            0.359034      11.0           0.388812      11.0  \\\n",
+       "a_2            0.488499       8.0           0.521888       8.0   \n",
+       "a_3            0.364619      10.0           0.406482      10.0   \n",
+       "a_4            0.920904       2.0           0.929335       2.0   \n",
+       "a_5            0.721062       4.0           0.731082       4.0   \n",
+       "a_6            1.000000       1.0           1.000000       1.0   \n",
+       "a_7            0.574526       6.0           0.603774       6.0   \n",
+       "a_8            0.300696      13.0           0.346401      13.0   \n",
+       "a_9            0.567927       7.0           0.597572       7.0   \n",
+       "a_10           0.462848       9.0           0.498808       9.0   \n",
+       "a_11           0.652220       5.0           0.667585       5.0   \n",
+       "a_12           0.767609       3.0           0.777137       3.0   \n",
+       "a_13           0.313497      12.0           0.357557      12.0   \n",
+       "a_14           0.070349      14.0           0.114521      14.0   \n",
+       "a_15           0.000000      15.0           0.000000      15.0   \n",
+       "\n",
+       "      Global Efficiency  Position  \n",
+       "a_1            0.411024      11.0  \n",
+       "a_2            0.546793       8.0  \n",
+       "a_3            0.437708      10.0  \n",
+       "a_4            0.935624       2.0  \n",
+       "a_5            0.738556       4.0  \n",
+       "a_6            1.000000       1.0  \n",
+       "a_7            0.625590       6.0  \n",
+       "a_8            0.380492      13.0  \n",
+       "a_9            0.619684       7.0  \n",
+       "a_10           0.525630       9.0  \n",
+       "a_11           0.679046       5.0  \n",
+       "a_12           0.784243       3.0  \n",
+       "a_13           0.390420      12.0  \n",
+       "a_14           0.147469      14.0  \n",
+       "a_15           0.000000      15.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_list[6]"
+    "pd.concat(results_list, axis = 1)"
    ]
   },
   {
