--- a/tests_on_clustered_data.ipynb
+++ b/tests_on_clustered_data.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import make_blobs\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,7 @@
        "       [ 2.44101309,  2.1000393 ,  2.2446845 ,  2.5602233 ,  2.4668895 ]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +264,7 @@
        "$a_15$   2.441013   2.100039   2.244684   2.560223   2.466889"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +427,7 @@
        "$a_15$ -0.920004      15.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -10474,7 +10483,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(W).to_csv(\"simulation_results_toy/W.csv\")\n",
+    "pd.DataFrame(Q).to_csv(\"simulation_results_toy/Q.csv\")\n",
+    "pd.DataFrame(P).to_csv(\"simulation_results_toy/P.csv\")\n",
+    "pd.DataFrame(Net_Flows).to_csv(\"simulation_results_toy/Net_Flows.csv\")\n",
+    "pd.DataFrame(Pos_Flows).to_csv(\"simulation_results_toy/Pos_Flows.csv\")\n",
+    "pd.DataFrame(Neg_Flows).to_csv(\"simulation_results_toy/Neg_Flows.csv\")\n",
+    "pd.concat(results, axis = 1).to_csv(\"simulation_results_toy/results.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Net_Flows = pd.read_csv(\"simulation_results_toy/Neg_Flows.csv\", index_col=0)\n",
+    "Net_Flows = np.array(Net_Flows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -10505,78 +10539,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a_1</th>\n",
-       "      <td>0.115844</td>\n",
-       "      <td>-0.159504</td>\n",
+       "      <td>0.094537</td>\n",
+       "      <td>0.306011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_2</th>\n",
-       "      <td>0.140416</td>\n",
-       "      <td>0.052578</td>\n",
+       "      <td>0.089509</td>\n",
+       "      <td>0.199464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_3</th>\n",
-       "      <td>0.232233</td>\n",
-       "      <td>-0.019144</td>\n",
+       "      <td>0.139086</td>\n",
+       "      <td>0.292924</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_4</th>\n",
-       "      <td>0.091467</td>\n",
-       "      <td>0.409083</td>\n",
+       "      <td>0.018804</td>\n",
+       "      <td>0.036388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_5</th>\n",
-       "      <td>0.064601</td>\n",
-       "      <td>0.144715</td>\n",
+       "      <td>0.029918</td>\n",
+       "      <td>0.117048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_6</th>\n",
-       "      <td>0.045220</td>\n",
-       "      <td>0.430027</td>\n",
+       "      <td>0.011760</td>\n",
+       "      <td>0.023525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_7</th>\n",
-       "      <td>0.151465</td>\n",
-       "      <td>0.137344</td>\n",
+       "      <td>0.093663</td>\n",
+       "      <td>0.162365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_8</th>\n",
-       "      <td>0.218265</td>\n",
-       "      <td>-0.074205</td>\n",
+       "      <td>0.114882</td>\n",
+       "      <td>0.348657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_9</th>\n",
-       "      <td>0.150976</td>\n",
-       "      <td>0.131692</td>\n",
+       "      <td>0.073538</td>\n",
+       "      <td>0.163893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_10</th>\n",
-       "      <td>0.223447</td>\n",
-       "      <td>0.058481</td>\n",
+       "      <td>0.097891</td>\n",
+       "      <td>0.266252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_11</th>\n",
-       "      <td>0.078716</td>\n",
-       "      <td>0.101537</td>\n",
+       "      <td>0.049519</td>\n",
+       "      <td>0.128706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_12</th>\n",
-       "      <td>0.064793</td>\n",
-       "      <td>0.203310</td>\n",
+       "      <td>0.027298</td>\n",
+       "      <td>0.090024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_13</th>\n",
-       "      <td>0.169278</td>\n",
-       "      <td>-0.083961</td>\n",
+       "      <td>0.114952</td>\n",
+       "      <td>0.292148</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_14</th>\n",
-       "      <td>0.152961</td>\n",
-       "      <td>-0.414664</td>\n",
+       "      <td>0.120790</td>\n",
+       "      <td>0.507270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>a_15</th>\n",
-       "      <td>0.030811</td>\n",
-       "      <td>-0.917288</td>\n",
+       "      <td>0.029473</td>\n",
+       "      <td>0.919519</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -10584,24 +10618,24 @@
       ],
       "text/plain": [
        "         Sigma        Mu\n",
-       "a_1   0.115844 -0.159504\n",
-       "a_2   0.140416  0.052578\n",
-       "a_3   0.232233 -0.019144\n",
-       "a_4   0.091467  0.409083\n",
-       "a_5   0.064601  0.144715\n",
-       "a_6   0.045220  0.430027\n",
-       "a_7   0.151465  0.137344\n",
-       "a_8   0.218265 -0.074205\n",
-       "a_9   0.150976  0.131692\n",
-       "a_10  0.223447  0.058481\n",
-       "a_11  0.078716  0.101537\n",
-       "a_12  0.064793  0.203310\n",
-       "a_13  0.169278 -0.083961\n",
-       "a_14  0.152961 -0.414664\n",
-       "a_15  0.030811 -0.917288"
+       "a_1   0.094537  0.306011\n",
+       "a_2   0.089509  0.199464\n",
+       "a_3   0.139086  0.292924\n",
+       "a_4   0.018804  0.036388\n",
+       "a_5   0.029918  0.117048\n",
+       "a_6   0.011760  0.023525\n",
+       "a_7   0.093663  0.162365\n",
+       "a_8   0.114882  0.348657\n",
+       "a_9   0.073538  0.163893\n",
+       "a_10  0.097891  0.266252\n",
+       "a_11  0.049519  0.128706\n",
+       "a_12  0.027298  0.090024\n",
+       "a_13  0.114952  0.292148\n",
+       "a_14  0.120790  0.507270\n",
+       "a_15  0.029473  0.919519"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
